fixing sonar issues
git-svn-id: https://svn.apache.org/repos/asf/incubator/empire-db/trunk@1070505 13f79535-47bb-0310-9956-ffa450edef68